--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@popperjs/core": "^2.11.6",
+    "@thisissoon/angular-masonry": "^1.2.0",
     "bootstrap": "^5.2.3",
     "gh-pages": "^6.1.1",
     "jquery": "^3.6.4",
+    "masonry-layout": "^4.2.2",
+    "ngx-masonry": "^14.0.1",
     "rxjs": "~7.8.0",
     "sleep": "^6.3.0",
     "sleep-ts": "^0.1.1",
