--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=https://josteda99.github.io/johan-daza-portfolio/"
+    "deploy": "ng build && ng deploy --base-href=https://josteda99.github.io/johan-daza-portfolio/"
   },
   "private": true,
   "dependencies": {
